--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,13 @@
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "~2.1.0",
         "milon/barcode": "^5.3",
         "mpociot/laravel-apidoc-generator": "^3.4",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
-        "safaricom/mpesa": "^1.0",
-        "smodav/mpesa": "^4.0",
-        "snowfire/beautymail": "dev-master",
         "spatie/laravel-permission": "^2.19",
-        "torann/geoip": "^1.0"
+        "torann/geoip": "^1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
