--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,21 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "7.2.*",
-        "agoalofalife/reports": "^0.2.2",
+        "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "jimmyjs/laravel-report-generator": "^1.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/passport": "^7.0",
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^5.3",
-        "mpociot/laravel-apidoc-generator": "^3.4",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-permission": "^2.19",
-        "torann/geoip": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
