--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@casl/ability": "^2.4.2",
         "@casl/vue": "^0.4.3",
         "chart.js": "^2.7.2",
+        "element-ui": "^2.12.0",
         "jspdf": "^1.4.1",
         "laravel-echo": "^1.4.0",
         "pusher-js": "^4.3.1",
