--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         "barryvdh/laravel-dompdf": "^0.8.4",
         "beyondcode/laravel-websockets": "^1.3",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.0",
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
+        "league/csv": "^9.4",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^5.3",
         "pusher/pusher-http-laravel": "^4.2",
