--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "asimlqt/php-google-spreadsheet-client": "3.0.*",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "beyondcode/laravel-websockets": "^1.3",
         "fideloper/proxy": "^4.0",
@@ -24,6 +25,7 @@
         "milon/barcode": "^5.3",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
+        "revolution/laravel-google-sheets": "^5.0",
         "spatie/laravel-permission": "^2.19",
         "torann/geoip": "^1.0"
     },
