--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "africastalking/africastalking": "^2.3",
         "asimlqt/php-google-spreadsheet-client": "3.0.*",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "beyondcode/laravel-websockets": "^1.3",
