--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "vue-chartkick": "^0.3.3",
         "vue-chat-scroll": "^1.3.3",
         "vue-csv-import": "^1.6.0",
+        "vue-digital-clock": "^2.0.0",
+        "vue-good-table": "^2.18.1",
         "vue-google-autocomplete": "^1.1.0",
         "vue-json-excel": "^0.2.83",
         "vue-pdf": "^3.3.1",
@@ -44,6 +46,7 @@
         "vue-top-progress": "^0.7.0",
         "vue-upload-multiple-image": "^1.1.2",
         "vue2-google-maps": "^0.9.8",
-        "vuetify": "^1.1.9"
+        "vuetify": "^1.1.9",
+        "vuex": "^3.1.2"
     }
 }
