--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "africastalking/africastalking": "^2.3",
         "asimlqt/php-google-spreadsheet-client": "3.0.*",
+        "bacon/bacon-qr-code": "~1.0.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "beyondcode/laravel-websockets": "^1.3",
         "fideloper/proxy": "^4.0",
@@ -24,6 +25,7 @@
         "league/csv": "^9.4",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^5.3",
+        "pragmarx/google2fa-laravel": "^1.3",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
         "revolution/laravel-google-sheets": "^5.0",
