--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,17 @@
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.2",
         "laravel/passport": "^7.0",
-        "laravel/scout": "^4.0",
-        "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "league/csv": "^9.4",
         "maatwebsite/excel": "^3.1",
-        "milon/barcode": "^5.3",
+        "milon/barcode": "^6.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
         "revolution/laravel-google-sheets": "^5.0",
-        "spatie/laravel-permission": "^2.19",
+        "spatie/laravel-permission": "^3.6",
         "torann/geoip": "^1.0"
     },
     "require-dev": {
