--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app_2.js": "/js/app_2.js"
+    "/js/app_2.js": "/js/app_2.js",
+    "/css/app.css": "/css/app.css"
 }
