--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,12 @@
         "league/csv": "^9.4",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^6.0",
+        "nao-pon/flysystem-google-drive": "~1.1",
         "pragmarx/google2fa-laravel": "^1.3",
         "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0",
         "revolution/laravel-google-sheets": "^5.0",
+        "spatie/laravel-backup": "^6.7",
         "spatie/laravel-permission": "^3.6",
         "torann/geoip": "^1.0"
     },
