--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,13 @@
         "google/apiclient": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.1",
         "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
         "league/csv": "^9.4",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^6.0",
+        "mpociot/laravel-apidoc-generator": "^4.3",
         "nao-pon/flysystem-google-drive": "~1.1",
         "pragmarx/google2fa-laravel": "^1.3",
         "pusher/pusher-http-laravel": "^4.2",
@@ -37,7 +39,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
+        "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
